lots of styling and cleaning up, especially single and edit project

--- a/angular.json
+++ b/angular.json
@@ -29,6 +29,11 @@
             "styles": [
               "src/assets/sass/styles.scss"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src/assets/sass"
+              ]
+            },
             "scripts": []
           },
           "configurations": {
@@ -89,6 +94,11 @@
             "styles": [
               "src/assets/sass/styles.scss"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src/assets/sass"
+              ]
+            },
             "scripts": []
           }
         },
