--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@agm/core": "^1.0.0-beta.6",
+    "@agm/core": "^1.1.0",
     "@angular/animations": "^9.0.4",
     "@angular/common": "~9.0.4",
     "@angular/compiler": "~9.0.4",
@@ -22,7 +22,7 @@
     "@angular/router": "~9.0.4",
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
-    "ngx-toastr": "^10.0.4",
+    "ngx-toastr": "^12.0.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
