Dared to enable strict mode and ended up cleaning A LOT

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,10 @@
       "es2018",
       "dom"
     ],
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "strict": true,
+  },
+  "angularCompilerOptions": {
+    "strictTemplates": true
   }
 }
