--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~13.1.3",
     "@angular/platform-browser-dynamic": "~13.1.3",
     "@angular/router": "~13.1.3",
+    "@ngneat/until-destroy": "^9.0.0",
     "dompurify": "^2.3.4",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
@@ -34,6 +35,7 @@
     "@angular/cli": "~13.1.3",
     "@angular/compiler-cli": "~13.1.3",
     "@angular/language-service": "~13.1.3",
+    "@types/dompurify": "^2.3.3",
     "@types/jasmine": "~3.10.3",
     "@types/jasminewd2": "~2.0.10",
     "@types/node": "^17.0.10",
