Dared to set strict mode on and cleaned up a LOT

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
         "noUnusedLocals": true,
         "esModuleInterop": true,
         "paths": {},
-        "skipLibCheck": true
+        "skipLibCheck": true,
+        "strict": true
     }
 }
