--- a/package.json
+++ b/package.json
@@ -23,36 +23,38 @@
   },
   "homepage": "https://github.com/sieem/infiltro-planning-api#readme",
   "dependencies": {
-    "axios": "^0.21.1",
+    "axios": "^0.25.0",
     "bcrypt": "^5.0.1",
     "compression": "^1.7.4",
-    "cookie-parser": "^1.4.5",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "fs-extra": "^9.1.0",
-    "googleapis": "^70.0.0",
+    "dotenv": "^14.2.0",
+    "express": "^4.17.2",
+    "fs-extra": "^10.0.0",
+    "googleapis": "^92.0.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
-    "mongoose": "^5.12.3",
-    "multer": "^1.4.2",
-    "node-schedule": "^2.0.0",
-    "nodemailer": "^6.5.0",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.2.3"
+    "mongoose": "^6.1.7",
+    "multer": "^1.4.4",
+    "node-schedule": "^2.1.0",
+    "nodemailer": "^6.7.2",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.4"
   },
   "devDependencies": {
-    "@types/compression": "^1.7.0",
+    "@types/bcrypt": "^5.0.0",
+    "@types/compression": "^1.7.2",
     "@types/cookie-parser": "^1.4.2",
-    "@types/cors": "^2.8.10",
-    "@types/express": "^4.17.11",
-    "@types/fs-extra": "^9.0.10",
-    "@types/jsonwebtoken": "^8.5.1",
-    "@types/mongoose": "^5.10.4",
-    "@types/node": "^14.14.37",
-    "@types/node-schedule": "^1.3.1",
-    "@types/nodemailer": "^6.4.1",
-    "node-ssh": "^11.1.1",
-    "nodemon": "^2.0.7"
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/fs-extra": "^9.0.13",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.7",
+    "@types/node": "^17.0.10",
+    "@types/node-schedule": "^1.3.2",
+    "@types/nodemailer": "^6.4.4",
+    "node-ssh": "^12.0.2",
+    "nodemon": "^2.0.15"
   }
 }
