Swap karma for jest

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.conf.json -o --host 0.0.0.0",
     "build": "ng build --configuration production",
-    "test": "ng test",
+    "test": "jest",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "api:dev": "nodemon api/server.ts",
@@ -22,9 +22,10 @@
     "@angular/compiler": "~13.1.3",
     "@angular/core": "~13.1.3",
     "@angular/forms": "~13.1.3",
-    "@angular/platform-browser-dynamic": "~13.1.3",
     "@angular/platform-browser": "~13.1.3",
+    "@angular/platform-browser-dynamic": "~13.1.3",
     "@angular/router": "~13.1.3",
+    "@ngneat/spectator": "^10.0.0",
     "@ngneat/until-destroy": "^9.0.0",
     "axios": "^0.25.0",
     "bcrypt": "^5.0.1",
@@ -52,8 +53,8 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.1.3",
     "@angular-eslint/builder": "13.0.1",
-    "@angular-eslint/eslint-plugin-template": "13.0.1",
     "@angular-eslint/eslint-plugin": "13.0.1",
+    "@angular-eslint/eslint-plugin-template": "13.0.1",
     "@angular-eslint/schematics": "13.0.1",
     "@angular-eslint/template-parser": "13.0.1",
     "@angular/cli": "~13.1.3",
@@ -66,28 +67,21 @@
     "@types/dompurify": "^2.3.3",
     "@types/express": "^4.17.13",
     "@types/fs-extra": "^9.0.13",
-    "@types/jasmine": "~3.10.3",
-    "@types/jasminewd2": "~2.0.10",
+    "@types/jest": "^27.4.0",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.7",
-    "@types/node-schedule": "^1.3.2",
     "@types/node": "^17.0.10",
+    "@types/node-schedule": "^1.3.2",
     "@types/nodemailer": "^6.4.4",
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
     "codelyzer": "^6.0.2",
     "eslint": "^8.2.0",
-    "jasmine-core": "~4.0.0",
-    "jasmine-spec-reporter": "~7.0.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.3",
-    "karma-jasmine-html-reporter": "^1.7.0",
-    "karma-jasmine": "~4.0.1",
-    "karma": "~6.3.11",
+    "jest": "^27.4.7",
+    "jest-preset-angular": "^11.1.0",
     "node-ssh": "^12.0.2",
     "nodemon": "^2.0.15",
-    "protractor": "~7.0.0",
     "ts-node": "~10.4.0",
     "tslint": "~6.1.3"
   }
