Start with some pipe unit tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
     ],
     "skipLibCheck": true,
     "strict": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true
   },
   "angularCompilerOptions": {
     "strictTemplates": true
