--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "api:dev": "nodemon api/server.ts --watch api",
-    "api:build": "tsc",
+    "api:build": "cd api && tsc",
     "api:sync": "ts-node api/calendarSync",
     "deploy": "ts-node api/scripts/deploy",
     "postinstall": "ngcc"
