--- a/package.json
+++ b/package.json
@@ -14,17 +14,17 @@
     "@angular/cli": "~14.1.0",
     "@angular/compiler-cli": "~14.1.0",
     "@angular/language-service": "~14.1.0",
-    "@nrwl/angular": "^14.4.3",
-    "@nrwl/cli": "14.4.3",
-    "@nrwl/cypress": "14.4.3",
-    "@nrwl/eslint-plugin-nx": "14.4.3",
-    "@nrwl/express": "^14.4.3",
-    "@nrwl/jest": "14.4.3",
-    "@nrwl/js": "14.4.3",
-    "@nrwl/linter": "14.4.3",
-    "@nrwl/node": "14.4.3",
+    "@nrwl/angular": "^14.5.2",
+    "@nrwl/cli": "14.5.2",
+    "@nrwl/cypress": "14.5.2",
+    "@nrwl/eslint-plugin-nx": "14.5.2",
+    "@nrwl/express": "^14.5.2",
+    "@nrwl/jest": "14.5.2",
+    "@nrwl/js": "14.5.2",
+    "@nrwl/linter": "14.5.2",
+    "@nrwl/node": "14.5.2",
     "@nrwl/nx-cloud": "latest",
-    "@nrwl/workspace": "14.4.3",
+    "@nrwl/workspace": "14.5.2",
     "@types/bcrypt": "^5.0.0",
     "@types/compression": "^1.7.2",
     "@types/cookie-parser": "^1.4.3",
@@ -33,22 +33,22 @@
     "@types/express": "4.17.13",
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "28.1.6",
-    "@types/node": "18.0.6",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/multer": "^1.4.7",
+    "@types/node": "18.6.3",
     "@types/node-schedule": "^2.1.0",
     "@types/nodemailer": "^6.4.4",
-    "@typescript-eslint/eslint-plugin": "^5.30.7",
-    "@typescript-eslint/parser": "^5.30.7",
-    "autoprefixer": "^10.4.7",
-    "cypress": "^10.3.1",
-    "eslint": "~8.20.0",
+    "@typescript-eslint/eslint-plugin": "^5.32.0",
+    "@typescript-eslint/parser": "^5.32.0",
+    "autoprefixer": "^10.4.8",
+    "cypress": "^10.4.0",
+    "eslint": "~8.21.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-cypress": "^2.12.1",
     "jest": "28.1.3",
     "jest-preset-angular": "~12.2.0",
-    "node-ssh": "^12.0.5",
-    "nx": "14.4.3",
+    "node-ssh": "^13.0.0",
+    "nx": "14.5.2",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "ts-jest": "28.0.7",
@@ -56,16 +56,16 @@
     "typescript": "~4.7.4"
   },
   "dependencies": {
-    "@agm/core": "^3.0.0-beta.0",
     "@angular/animations": "~14.1.0",
     "@angular/common": "~14.1.0",
     "@angular/compiler": "~14.1.0",
     "@angular/core": "~14.1.0",
     "@angular/forms": "~14.1.0",
+    "@angular/google-maps": "^14.1.0",
     "@angular/platform-browser": "~14.1.0",
     "@angular/platform-browser-dynamic": "~14.1.0",
     "@angular/router": "~14.1.0",
-    "@ngneat/spectator": "^11.1.0",
+    "@ngneat/spectator": "^11.1.3",
     "@ngneat/until-destroy": "^9.2.1",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
@@ -80,13 +80,13 @@
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
-    "mongoose": "^6.4.6",
+    "mongoose": "^6.5.0",
     "multer": "1.4.5-lts.1",
     "ngx-toastr": "^15.0.0",
     "node-schedule": "^2.1.0",
     "nodemailer": "^6.7.7",
     "rxjs": "~7.5.6",
     "tslib": "^2.4.0",
-    "zone.js": "~0.11.6"
+    "zone.js": "~0.11.7"
   }
 }
