Add init script so I can always start from scratch

--- a/packages/scripts/project.json
+++ b/packages/scripts/project.json
@@ -23,6 +23,12 @@
       "options": {
         "command": "ts-node packages/scripts/src/lib/deploy"
       }
+    },
+    "init": {
+      "executor": "@nrwl/workspace:run-commands",
+      "options": {
+        "command": "ts-node packages/scripts/src/lib/init"
+      }
     }
   },
   "tags": []
