--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
+    "start:frontend": "nx serve frontend",
+    "start:backend": "nx serve backend",
+    "deploy": "nx run scripts:deploy",
     "postinstall": "ngcc --properties es2020 browser module main"
   },
   "private": true,
